<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    tools:context=".ui.detalle.admin.registroProducto.RegistroProductoActivity">

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/text_tipo_sin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/input_new_product_nombre"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/input_new_product_nombre"
        app:layout_constraintTop_toBottomOf="@+id/input_new_product_nombre" />

    <RadioGroup
        android:id="@+id/radioGroup_new_user"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView27">

        <RadioButton
            android:id="@+id/radio_new_product_ensen"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/text_ensenyanza"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_new_product_libre"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/text_vuelo_libre"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/text_nombre"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/text_precio_sin"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_new_user" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:text="@string/text_horas_sin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/input_new_product_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <Button
        android:id="@+id/btn_confirm_new_prodc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="60dp"
        android:text="@string/text_confirm"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cancel_new_prodc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/text_cancelar"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_confirm_new_prodc"
        app:layout_constraintStart_toEndOf="@+id/btn_confirm_new_prodc"
        app:layout_constraintTop_toTopOf="@+id/btn_confirm_new_prodc"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/input_new_product_horas"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <EditText
        android:id="@+id/input_new_product_precio"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textView29"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

</androidx.constraintlayout.widget.ConstraintLayout>